fixing spacing

--- a/style.css
+++ b/style.css
@@ -78,7 +78,17 @@ img {
 }
 
 #pintrest {
-    font-size: 3;
+    font-size: 20px;
+    
+}
+#gplus {
+    font-size: 20px;
+}
+#facebook {
+    font-size: 20px;
+}
+#twitter{
+    font-size: 20px;
 }
 @media only screen and (max-width: 850px) {
     img {
